@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libfdatetime],
- [20130904],
+ [20130928],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
