@@ -70,6 +70,12 @@ int libfdatetime_floatingtime_copy_from_64bit(
      uint64_t value_64bit,
      libcerror_error_t **error );
 
+LIBFDATETIME_EXTERN \
+int libfdatetime_floatingtime_copy_to_64bit(
+     libfdatetime_floatingtime_t *floatingtime,
+     uint64_t *value_64bit,
+     libcerror_error_t **error );
+
 int libfdatetime_floatingtime_copy_to_date_time_values(
      libfdatetime_internal_floatingtime_t *internal_floatingtime,
      libfdatetime_date_time_values_t *date_time_values,
